fixed bad alignment

--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -179,32 +179,33 @@ a{
     display:flex;
     box-sizing: border-box;
     width: 100%;
+    height: 100%;
     flex-direction: row;
-    height: 80%;
     text-align: center;
     padding-inline: 2em;
+}
+
+
+.home-cat{
+    flex-grow: 1;
+    flex-basis: 25%;
+    aspect-ratio: 1/1;
+    box-sizing: border-box;
+    margin-inline: .5em;
 }
 
 .home-cat-header{
    cursor: pointer; 
    aspect-ratio: auto;
 }
-
-.home-cat{
-    flex-grow: 1;
-    flex-basis: 25%;
-    aspect-ratio: 1/1;
-    margin-inline: .5em;
-}
-
 .home-cat img{
     width: 100%;
-    height: 100%;
     border: solid 3px #28aea7;
     cursor: pointer;
     opacity: 1;
     transition: opacity .5s;
     object-fit: cover;
+    aspect-ratio: 1/1;
 }
 
 .home-cat *:hover{
@@ -218,14 +219,13 @@ a{
     object-fit: cover;
     text-align: center;
     width: 100%;
-    padding-inline: 1em;
-    box-sizing: border-box;
+    height: max-content;
     aspect-ratio: 1/1;
     border: solid 3px grey;
     background-color: white;
     color:  grey;
     font-family: 'Palatino Linotype', Palatino, Times, serif;
-    font-size: 2em;
+    font-size: 20pt;
     opacity: 1;
     transition: opacity .5s;
 }
